--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
-  },
+    "test": "jest",
+    "react-devtools": "react-devtools"
+    },
   "dependencies": {
     "axios": "^0.16.2",
     "react": "16.0.0-alpha.12",
@@ -22,6 +23,7 @@
     "babel-jest": "20.0.3",
     "babel-preset-react-native": "2.1.0",
     "jest": "20.0.4",
+    "react-devtools": "^2.5.0",
     "react-test-renderer": "16.0.0-alpha.12",
     "remote-redux-devtools": "^0.5.12"
   },
