trying to update project and removing create-react-native

--- a/app.json
+++ b/app.json
@@ -1,7 +1,20 @@
 {
-  "name": "Insulince",
-  "displayName": "Insulince",
   "expo": {
-    "sdkVersion": "19.0.0"
+    "sdkVersion": "19.0.0",
+    "ios": {
+      "bundleIdentifier": "insulince"
+    },
+    "android": {
+      "package": "insulince"
+    },
+    "name": "insulince",
+    "slug": "insulince",
+    "version": "0.1.0",
+    "isDetached": true,
+    "detach": {
+      "scheme": "exp72b9b3955440434da72cf9634adb0315",
+      "iosExpoViewUrl": "https://s3.amazonaws.com/exp-exponent-view-code/ios-v1.18.2-sdk19.0.0-3fabbbb7-61b3-4a1e-9932-12d0aa6af276.tar.gz",
+      "androidExpoViewUrl": "https://s3.amazonaws.com/exp-exponent-view-code/android-v1.18.4-sdk19.0.0-3fb414c9-8696-4966-a0ac-9ca424242424.tar.gz"
+    }
   }
 }
