--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "art": "^0.10.1",
     "axios": "^0.16.2",
+    "d3": "^4.10.0",
+    "d3-shape": "^1.2.0",
     "expo": "^19.0.0",
     "npm": "^4.6.1",
     "prop-types": "^15.5.10",
