Change signup session action

--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "start": "react-native-scripts start",
+     "eject": "react-native-scripts eject",
+     "android": "react-native-scripts android",
+     "ios": "react-native-scripts ios",
+     "test": "node node_modules/jest/bin/jest.js --watch",
+     "postinstall": "remotedev-debugger --hostname localhost --port 8081 --injectserver"
   },
   "dependencies": {
     "axios": "^0.16.2",
