correct package.json

--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
-    "postinstall": "remotedev-debugger --hostname localhost --port 8081 --injectserver"
+    "start": "react-native-scripts start",
+    "eject": "react-native-scripts eject",
+    "android": "react-native-scripts android",
+    "ios": "react-native-scripts ios",
+    "test": "node node_modules/jest/bin/jest.js --watch"
   },
   "dependencies": {
+    "@expo/vector-icons": "^5.1.0",
     "axios": "^0.16.2",
     "expo": "^19.0.0",
     "native-base": "^2.3.1",
     "npm": "^4.6.1",
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
-    "react-native": "0.47.1",
+    "react-native": "0.46.1",
     "react-native-elements": "^0.15.0",
     "react-native-progress": "^3.3.0",
     "react-native-vector-icons": "^4.3.0",
