--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "react-native-scripts start",
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
+    "ios": "react-native run-ios",
     "test": "node node_modules/jest/bin/jest.js --watch"
+  },
+  "rnpm": {
+    "assets": [
+      "Fonts"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^5.1.0",
     "axios": "^0.16.2",
-    "expo": "^19.0.0",
+    "expo": "^19.0.1",
     "native-base": "^2.3.1",
     "npm": "^4.6.1",
     "prop-types": "^15.5.10",
@@ -27,6 +32,7 @@
     "react-native": "0.46.1",
     "react-native-elements": "^0.15.0",
     "react-native-progress": "^3.3.0",
+    "react-native-svg": "^5.4.1",
     "react-native-vector-icons": "^4.3.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
@@ -34,7 +40,10 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "remote-redux-devtools": "^0.5.12"
+    "remote-redux-devtools": "^0.5.12",
+    "victory": "^0.21.4",
+    "victory-native": "^0.14.0",
+    "xcode": "^0.9.3"
   },
   "jest": {
     "preset": "react-native"
