--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-jest": "20.0.3",
     "babel-preset-react-native": "2.1.0",
     "jest": "20.0.4",
+    "react-native-scripts": "^1.1.0",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -15,7 +16,7 @@
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
     "test": "node node_modules/jest/bin/jest.js --watch",
-    "postinstall": "remotedev-debugger --hostname localhost --port 8081 --injectserver"
+    "debugger": "remotedev-debugger --hostname localhost --port 8081 --injectserver"
   },
   "dependencies": {
     "axios": "^0.16.2",
