--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.1",
     "react-native-elements": "^0.15.0",
+    "react-native-google-analytics-bridge": "^5.2.2",
     "react-native-progress": "^3.3.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
