saving new npm installs

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "remote-redux-devtools": "^0.5.12"
+    "remote-redux-devtools": "^0.5.12",
+    "victory-native": "^0.14.0"
   },
   "jest": {
     "preset": "react-native"
