--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "expo": "^19.0.0",
+    "lodash": "^4.17.4",
     "native-base": "^2.3.1",
     "npm": "^4.6.1",
     "prop-types": "^15.5.10",
