--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "babel-jest": "20.0.3",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-react-native": "2.1.0",
     "jest": "20.0.4",
     "react-native-scripts": "^1.1.0",
