--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "npm": "^4.6.1",
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
-    "react-native": "0.46.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-19.0.0.tar.gz",
     "react-native-elements": "^0.15.0",
     "react-native-google-analytics-bridge": "^5.2.2",
     "react-native-progress": "^3.3.0",
